api/tests/snapshots/mood_routes__statistics_view_post_200_counted.snap
---
source: tests/mood_routes.rs
expression: "json!({ \"status\": status, \"body\": actual })"
---
{
  "body": {
    "counted": true
  },
  "status": 200
}
