api/tests/snapshots/mood_routes__streak_populated.snap
---
source: tests/mood_routes.rs
expression: "json!({ \"status\": status, \"body\": actual })"
---
{
  "body": {
    "current_streak": 2,
    "message": "Current streak: 2 days"
  },
  "status": 200
}
